<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WheelsMainActivity" >

    <!-- #1C -->

    <TextView
        android:id="@+id/bus_stop_1c"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center_vertical|center_horizontal|center"
        android:text="@string/bus_number_1c_label"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/bus_stop_spinner_1c"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="0dp"
        android:layout_toRightOf="@+id/bus_stop_1c"
        android:gravity="center_vertical|center_horizontal|center" />
    <!-- #8a -->

    <TextView
        android:id="@+id/bus_stop_8a"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/bus_stop_1c"
        android:gravity="center_vertical|center_horizontal|center"
        android:text="@string/bus_number_8a_label"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/bus_stop_spinner_8a"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/bus_stop_spinner_1c"
        android:layout_marginLeft="0dp"
        android:layout_toRightOf="@+id/bus_stop_8a"
        android:gravity="center_vertical|center_horizontal|center" />
    <!-- #8b -->

    <TextView
        android:id="@+id/bus_stop_8b"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/bus_stop_8a"
        android:gravity="center_vertical|center_horizontal|center"
        android:text="@string/bus_number_8b_label"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/bus_stop_spinner_8b"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/bus_stop_spinner_8a"
        android:layout_marginLeft="0dp"
        android:layout_toRightOf="@+id/bus_stop_8b"
        android:gravity="center_vertical|center_horizontal|center" />

    <!-- #10w -->

    <TextView
        android:id="@+id/bus_stop_10w"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/bus_stop_8b"
        android:gravity="center_vertical|center_horizontal|center"
        android:text="@string/bus_number_10w_label"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/bus_stop_spinner_10w"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/bus_stop_spinner_8b"
        android:layout_marginLeft="0dp"
        android:layout_toRightOf="@+id/bus_stop_10w"
        android:gravity="center_vertical|center_horizontal|center" />

    <!-- #10e -->

    <TextView
        android:id="@+id/bus_stop_10e"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/bus_stop_10w"
        android:gravity="center_vertical|center_horizontal|center"
        android:text="@string/bus_number_10e_label"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/bus_stop_spinner_10e"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/bus_stop_spinner_10w"
        android:layout_marginLeft="0dp"
        android:layout_toRightOf="@+id/bus_stop_10e"
        android:gravity="center_vertical|center_horizontal|center" />

   <!--  <Button
        android:id="@+id/refresh_icon"
        android:layout_width="64px"
        android:layout_height="64px"
        android:layout_below="@+id/bus_stop_spinner_10e"
        android:layout_marginBottom="1dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center_horizontal|center"
        android:background="@drawable/refresh"
        android:onClick="refreshPage" /> -->

    <RelativeLayout
        android:id="@+id/status_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/bus_stop_spinner_10e"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/roundbg"
        android:orientation="horizontal" >

<!--         <TextView
            android:id="@+id/next_bus_at_10e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:autoLink="web"
            android:textColor="#aaaaaa"
            android:textSize="20sp"
            android:textStyle="bold" />
 -->    </RelativeLayout>

</RelativeLayout>