<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WheelsMainActivity" >

    <RelativeLayout
        android:id="@+id/commuter_app_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/roundbg"
        android:gravity="center_vertical|center_horizontal|center"
        android:orientation="horizontal" >

        <!-- android:layout_below="@+id/button_wheels" -->

        <Button
            android:id="@+id/button_bart"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/app_bart_logo"
            android:enabled="true"
            android:gravity="center_vertical|center_horizontal|center"
            android:onClick="bart"
            android:padding="0dip"
            android:textColor="#cccccc"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/label_bart_button"
            android:layout_width="75dp"
            android:layout_height="40dp"
            android:layout_below="@+id/button_bart"
            android:layout_marginTop="2dp"
            android:gravity="center_vertical|center_horizontal|center"
            android:padding="0dip"
            android:text="@string/bart_button_label"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_wheels"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/button_bart"
            android:background="@drawable/logo_wheels"
            android:enabled="true"
            android:gravity="center_vertical|center_horizontal|center"
            android:onClick="wheels"
            android:padding="0dip"
            android:text="@string/wheels_button_label"
            android:textColor="#cccccc"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/label_wheels_button"
            android:layout_width="75dp"
            android:layout_height="40dp"
            android:layout_below="@+id/button_wheels"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@+id/label_bart_button"
            android:gravity="center_vertical|center_horizontal|center"
            android:padding="0dip"
            android:text="@string/wheels_button_label"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_muni_stops"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/button_wheels"
            android:background="@drawable/app_muni_logo"
            android:enabled="true"
            android:gravity="center_vertical|center_horizontal|center"
            android:onClick="muniStops"
            android:padding="0dip"
            android:textColor="#cccccc"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/label_muni_button"
            android:layout_width="75dp"
            android:layout_height="40dp"
            android:layout_below="@+id/button_muni_stops"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@+id/label_wheels_button"
            android:gravity="center_vertical|center_horizontal|center"
            android:padding="0dip"
            android:text="@string/muni_button_stops_label"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_actransit"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_below="@+id/label_bart_button"
            android:layout_marginTop="15dp"
            android:background="@drawable/logo_actransit"
            android:enabled="true"
            android:gravity="center_vertical|center_horizontal|center"
            android:onClick="acTransit"
            android:padding="0dip"
            android:text="@string/actransit_button_stops_label"
            android:textColor="#cccccc"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/label_actransit_button"
            android:layout_width="75dp"
            android:layout_height="40dp"
            android:layout_below="@+id/button_actransit"
            android:layout_marginTop="2dp"
            android:gravity="center_vertical|center_horizontal|center"
            android:padding="0dip"
            android:text="@string/actransit_button_stops_label"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_dumbartonexpress"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_below="@+id/label_wheels_button"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/button_actransit"
            android:background="@drawable/logo_dumbartonexpress"
            android:enabled="true"
            android:gravity="center_vertical|center_horizontal|center"
            android:onClick="dumbartonExpress"
            android:padding="0dip"
            android:text="@string/dumbartonexpress_button_stops_label"
            android:textColor="#cccccc"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/label_dumbartonexpress_button"
            android:layout_width="75dp"
            android:layout_height="40dp"
            android:layout_below="@+id/button_dumbartonexpress"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@+id/label_actransit_button"
            android:gravity="center_vertical|center_horizontal|center"
            android:padding="0dip"
            android:text="@string/dumbartonexpress_button_stops_label"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_samtrans"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_below="@+id/label_muni_button"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/button_dumbartonexpress"
            android:background="@drawable/logo_samtrans"
            android:enabled="true"
            android:gravity="center_vertical|center_horizontal|center"
            android:onClick="samTrans"
            android:padding="0dip"
            android:text="@string/samtrans_button_stops_label"
            android:textColor="#cccccc"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/label_samtrans_button"
            android:layout_width="75dp"
            android:layout_height="40dp"
            android:layout_below="@+id/button_samtrans"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@+id/label_dumbartonexpress_button"
            android:gravity="center_vertical|center_horizontal|center"
            android:padding="0dip"
            android:text="@string/samtrans_button_stops_label"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_westcat"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:layout_below="@+id/label_actransit_button"
            android:layout_marginTop="15dp"
            android:background="@drawable/logo_westcat"
            android:enabled="true"
            android:gravity="center_vertical|center_horizontal|center"
            android:onClick="westcat"
            android:padding="0dip"
            android:text="@string/westcat_button_stops_label"
            android:textColor="#cccccc"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/label_westcat_button"
            android:layout_width="75dp"
            android:layout_height="40dp"
            android:layout_below="@+id/button_westcat"
            android:layout_marginTop="2dp"
            android:gravity="center_vertical|center_horizontal|center"
            android:padding="0dip"
            android:text="@string/westcat_button_stops_label"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />
        
             <Button
            android:id="@+id/button_logo"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@+id/label_westcat_button"
            android:layout_marginTop="15dp"
            android:background="@drawable/logobutton"
            android:enabled="true"
            android:gravity="center_vertical|center_horizontal|center"
            android:onClick="muniRoutes"
            android:padding="0dip"
            android:text="@string/muni_button_routes_label"
            android:textColor="#cccccc"
            android:textSize="20sp"
            android:textStyle="normal" />
       
        <!--
             <Button
            android:id="@+id/button_muni_routes"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@+id/button_muni_stops"
            android:layout_marginTop="15dp"
            android:background="@drawable/roundbutton"
            android:enabled="true"
            android:gravity="center_vertical|center_horizontal|center"
            android:onClick="muniRoutes"
            android:padding="0dip"
            android:text="@string/muni_button_routes_label"
            android:textColor="#cccccc"
            android:textSize="20sp"
            android:textStyle="normal" />
        -->
    </RelativeLayout>

</RelativeLayout>